2005-02-08  Roland Illig  <roland.illig@gmx.de>

	* editdraw.c: Renamed redraw_labels to buttonbar_redraw.
	* editwidget.c: Likewise. Renamed define_label_data to
	buttonbar_set_label_data. 

2005-02-08  Roland Illig  <roland.illig@gmx.de>

	* edit.h: Reformatted #definitions.

2005-02-07  Roland Illig  <roland.illig@gmx.de>

	* *.c: Removed trailing whitespace.
	* *.c: Removed unused parameters for static functions. Marked
	unused parameters for global functions. Removed redundant
	comments.

2005-02-07  Roland Illig  <roland.illig@gmx.de>

	* edit.h: Removed catstrs, as it is only used in editcmd.c.
	* editcmd.c (catstrs): Changed declaration to be static.
	* editcmd.c: Added const qualifiers.
	* syntax.c: Don't use catstrs anymore.
	* edit.c (user_menu): Likewise.
	* editwidget.c: Likewise.

2005-02-07  Roland Illig  <roland.illig@gmx.de>

	* edit.c: Improved message formatting.

2005-01-30  Roland Illig  <roland.illig@gmx.de>

	* edit.h: Removed NO_INLINE_GETBYTE conditional. The name was
	misleading, as it really meant INLINE_GETBYTE. Furthermore,
	it has not been working since the split of edit.h into edit-widget.h.
	* edit.c: Likewise.

2005-01-26  Roland Illig  <roland.illig@gmx.de>

	* editdraw.c (edit_status): Fixed drawing bug with ncurses.

2004-12-03  Roland Illig  <roland.illig@gmx.de>

	* edit.h: Renamed multiple inclusion guards that started with a
	double underscore. Added #includes for dependent files.
	* editcmddef.h: Likewise.
	* editlock.h: Likewise.
	* edit-widget.h: Likewise.

2004-12-02  Roland Illig  <roland.illig@gmx.de>

	* editcmd.c (edit_replace_cmd): Separated input and output arguments.
	* editcmd.c (edit_replace_dialog): Code cleanup.

2004-12-02  Pavel S. Shirshov  <me@pavelsh.pp.ru>

	* editcmd.c (edit_replace_prompt): Fix warning with 'unused' label_len.

2004-12-01  Roland Illig  <roland.illig@gmx.de>

	* editcmd.c: Introduced a type edit_getbyte_fn to get rid of
	the many function type casts.
